--- a/html/css/style.css
+++ b/html/css/style.css
@@ -14111,11 +14111,12 @@ footer p {
 }
 .index .contact {
   position: relative;
+  overflow: hidden;
 }
 .index .contact::before {
   content: "";
   display: block;
-  min-height: 670px;
+  min-height: 700px;
 }
 .index .contact iframe {
   width: 150%;
@@ -14164,10 +14165,53 @@ footer p {
   width: 24px;
   margin-right: 8px;
 }
+.index .contact .form_box ul li {
+  font-size: 1rem;
+}
+.index .contact .form_box ul a {
+  font-size: 1rem;
+  color: #3F3F3F;
+}
+.index .contact .form_box ul a:hover {
+  color: #035C3E;
+}
 .index .contact .form_box .line {
   width: 100%;
   height: 1px;
   margin: 15px 0;
   background-color: #3F3F3F;
+}
+@media (max-width: 991.98px) {
+  .index .contact iframe {
+    width: 100%;
+    height: 150%;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    -webkit-transform: translate(0%, -50%);
+            transform: translate(0%, -50%);
+    z-index: -1;
+  }
+  .index .contact .form_box_wrapper {
+    padding: 40px;
+    width: calc(100% - 30px);
+    position: absolute;
+    top: auto;
+    right: 15px;
+    left: 15px;
+    bottom: 0;
+  }
+  .index .contact .form_box ul a {
+    color: #3F3F3F;
+  }
+  .index .contact .form_box ul a:hover {
+    color: #035C3E;
+  }
+  .index .contact .form_box .line {
+    width: 100%;
+    height: 1px;
+    margin: 15px 0;
+    background-color: #3F3F3F;
+  }
 }
 /*# sourceMappingURL=style.css.map */
