--- a/html/scss/_index.scss
+++ b/html/scss/_index.scss
@@ -847,10 +847,11 @@
 	---------------------------------------------*/
 	.contact {
 		position: relative;
+		overflow: hidden;
 		&::before {
 			content: "";
 			display: block;
-			min-height: 670px;
+			min-height: 700px;
 		}
 		iframe {
 			width: 150%;
@@ -892,12 +893,58 @@
 					width: 24px;
 					margin-right: 8px;
 				}
+				li {
+					@include font-size(16px);
+				}
+				a {
+					@include font-size(16px);
+					color: $main-dark;
+					&:hover {
+						color: $primary;
+					}
+				}
 			}
 			.line {
 				width: 100%;
 				height: 1px;
 				margin:  15px 0;
 				background-color: $main-dark;
+			}
+		}
+		@include media-breakpoint-down(md) {
+			iframe {
+				width: 100%;
+				height: 150%;
+				position: absolute;
+				right: 0;
+				top: 50%;
+				transform: translate(0%, -50%);
+				z-index: -1;
+			}
+			.form_box_wrapper {
+				padding: 40px;
+				width: calc(100% - 30px);
+				position: absolute;
+				top: auto;
+				right: 15px;
+				left: 15px;
+				bottom: 0;
+			}
+			.form_box {
+				ul {
+					a {
+						color: $main-dark;
+						&:hover {
+							color: $primary;
+						}
+					}
+				}
+				.line {
+					width: 100%;
+					height: 1px;
+					margin:  15px 0;
+					background-color: $main-dark;
+				}
 			}
 		}
 	}
