--- a/html/scss/_layout.scss
+++ b/html/scss/_layout.scss
@@ -16,7 +16,7 @@
 }
 
 main {
-    min-height: 100vh
+    min-height: 90vh
 }
 
 header {
@@ -43,8 +43,10 @@ header {
     .logo {
         @include size(167px, auto);
         margin-right: 30px;
+        z-index: 911;
         img {
             @include size(100%, auto);
+            transition: all 0.3s ease;
         }
     }
 
@@ -203,6 +205,17 @@ header {
             }
         }
     }
+    @include media-breakpoint-up(md) {
+        &.-shrink {
+            height: 80px;
+            .logo img {
+                width: 80%;
+            };
+            & ~ .breadcrumb {
+                top: 80px;
+            }
+        }
+    }
     
 
     // 桌機斷點
@@ -338,6 +351,7 @@ header {
         justify-content: center;
         align-items: center;
         position: relative;
+        z-index: 911;
             /* burger */
         .burger {
             width: 40px;
@@ -416,29 +430,7 @@ footer {
         text-align: center;
     }
 }
-.wrapper.pg footer .top{
-    background: top / cover url(../img/static/contact_bg.png);
-	padding: 60px 15px 90px;
-    h2 {
-        margin-bottom: 30px;
-        @include font-size(36px);
-        text-align: center;
-        color: #4D4D4D;
-        font-weight: bold;
-        @include media-breakpoint-down(sm) {
-            @include font-size(28px);
-        }
-    }
-    .btns {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        a {
-            @include size(268px, fit-content);
-            margin: 0 10px;
-        }
-    }
-}
+
 .overlay {
     width: 100%;
     height: 100vh;
@@ -525,48 +517,6 @@ footer {
     }  
 }
 
-.pg_banner {
-    @include size(100%, 360px);
-    position: relative;
-    overflow: hidden;
-    img {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        min-height: 100%;
-        min-width: 100%;
-    }
-    h2 {
-        @include font-size(72px);
-        color: white;
-        text-shadow:0 0 30px $primary, 0 0 30px $primary-color-light-50;
-        position: absolute;
-        top: 50%;
-        left: 120px;
-        transform: translate( 0 , -50%);
-        @include media-breakpoint-down(lg) {
-            @include font-size(56px);
-            left: 60px;
-        }
-        @include media-breakpoint-down(md) {
-            @include font-size(48px);
-            left: 30px;
-        }
-    }
- 
-    @include media-breakpoint-down(sm) {
-        @include size(100%, 180px);
-        h2 {
-            @include font-size(42px);
-            top: auto;
-            left: 25px;
-            bottom: 20px;
-            transform: translate( 0 , 0);
-        }
-    }
-}
-
 .breadcrumb {
     display: block;
     width: 100%;
@@ -579,6 +529,7 @@ footer {
     background-color:white;
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.25);
     z-index: 901;
+    transition: all 0.3s ease;
     ul {
         display: block;
         // flex-wrap: wrap;
