--- a/html/scss/_part.scss
+++ b/html/scss/_part.scss
@@ -190,397 +190,53 @@ h2.pg_detail_title {
     }
 }
 
-.img_bg_card {
-    position: relative;
-    min-height: 484px;
+
+
+// 頁籤
+.pg_tab_list {
+    width: fit-content;
+    margin: 0 auto 60px;
     display: flex;
-    align-items: flex-end;
-    padding: 30px;
-    margin-bottom: 30px;
-    @include media-breakpoint-down(md) {
-        min-height: auto;
-        padding-top: 80px;
-    }
-    // 背景
-    > .img_box {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        img {
-            // @include size(100%);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            height: 100%;
-            min-width: 100%;
-            min-height: 100%;
-        }
+    flex-wrap: wrap;
+    justify-content: center;
+    li {
+        display: inline-block;
+        margin-bottom: 12px;
+        line-height: 1.2;
 
-        &::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            top: 0;
-            @include size(100%);
-            background-color: white;
-            opacity: 0.8;
-        }
-    }
-
-    // 標題
-    .icon_list_title{
-        position: relative;
-        font-size: 3rem;
-        font-weight: bold;
-        line-height: 1.5;
-        color: $primary;
-
-        // 背景
-        .img_box {
-            @include size(64px);
-            border-radius: 50%;
-            overflow: hidden;
-            box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
-
-            background-color: rgba(255, 255, 255, 0.5);
-            img {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
+        a {
+            position: relative;
+            padding: 0 12px;
+            color: $dark-secondary;
+            @include font-size(16px);
+            @include media-breakpoint-down(sm) {
+                @include font-size(15px);
             }
-        }
-
-        @media (max-width: 992px) {
-            font-size: 2.625rem;
-        }
-
-        @media (max-width: 576px) {
-            font-size: 2.25rem;
-        }
-    }
-
-    //   列表
-    .icon_list {
-        width: 100%;
-        ul {
-            padding-left: 0;
-            margin-top: 8px;
-
-            li {
-                position: relative;
-                width: 100%;
-                padding-left: 12px;
-                margin-bottom: 8px;
-                list-style: none;
-                font-size: 1.25rem;
-                line-height: 1.5;
-                a {
-                    position: relative;
-                    width: 100%;
-                    color: $dark-secondary;
-                    transition: all 0.3s ease;
-                }
-                &::before {
-                    content: "";
-                    width: 4px;
-                    height: 12px;
-                    border-radius: 9999px;
-                    position: absolute;
-                    top: 8px;
-                    left: 0px;
-                    background: $lake-green;
-                    transition: 0.3s ease;
-                }
-                &:hover {
-                    a {
-                        transform: translateX(8px);
-                    }
-                }
-                @include media-breakpoint-down(md) {
-                    font-size: 1.125rem;
-                }
-            }
-        }
-
-    }
-}
-
-.slider_card {
-    width: 100%;
-    padding: 15px;
-    .img_box {
-        width: 100%;
-        border-radius: 20px;
-        box-shadow: $box-shadow-tablist;
-        margin-bottom: 24px;
-        overflow: hidden;
-        .holder {
-            padding-bottom: 75.12%;
-            background-color: #bbbbbb;
-        }
-        img {
-            transition: all 0.3s ease; 
-        }
-    }
-    p {
-        @include font-size(20px);
-        font-weight: bold;
-        line-height: 1.5;
-        text-align: center;
-        color: $dark-secondary;
-        transition: all 0.3s ease; 
-    }
-    @include media-breakpoint-up(md) {
-        p {
-            @include font-size(24px);
-        }
-        &:hover {
-            .img_box img {
-                transform: translate(-50%, -50%) scale(1.2);
-            }
-            p {
+            &.active {
                 color: $primary;
             }
-        }
-    }
-}
-
-.backspace {
-    display: block;
-    padding: 4px 20px;
-    margin: 0 0 60px auto;
-    border: 1px solid $primary;
-    @include font-size(16px);
-    color: $primary;
-    &:hover {
-        background: $secondary-gradient-v-hover;
-        color: white;
-    }
-}
-
-// 橫向頁籤
-.tablist_container {
-    // width: calc(100vw - 100)
-}
-.scroll_wrapper {
-    overflow-x: auto;
-    width: 100vw;
-    position: relative;
-    left: -15px;
-    margin-bottom: 30px;
-}
-.tab_list.horizon {
-    @include size(fit-content, auto);
-    min-width: calc(100% - 30px);
-    position: relative;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-left: 15px;
-    margin-right: 15px;
-    background-color: white;
-    .tab_list__wrapper {
-        @include size(auto, 100%);
-        position: relative;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        border-radius: 10px;
-    }
-    .tab {
-        width: auto;
-        height: 100%;
-        flex-shrink: 0;
-        // margin-left: 10px;
-        // margin-right: 20px;
-        z-index: 1;
-        text-align: center;
-        @include font-size(28px);
-        font-weight: bold;
-        color: $primary;
-        cursor: pointer;
-        &.active {
-            background-color: rgba(124, 124, 124, 0.2);        
-        }
-        .hover_box {
-            width: 100%;
-            height: 100%;
-            padding: 25px 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            @include media-breakpoint-up(sm) {
-                &:hover{
-                    background-color: rgba(124, 124, 124, 0.1);
-                }
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                width: 0;
+                bottom: -10px;
+                left: 50%;
+                transform: translateX(-50%);
+                transition: all 0.3s ease;
+                border-bottom: 4px solid $primary;
             }
-            
+            &:hover::after {
+                width: calc(100% - 12px);
+            }
+        }
+        &:not(:first-child) {
+            border-left: 1px solid $dark-secondary;
         }
     }
     @include media-breakpoint-down(md) {
-        // margin-bottom: 20px;
-        .tab {
-            @include font-size(16px);
-        }
+        margin: 0 auto 40px;
     }
-}   
-
-.tablist_swiper {
-    position: relative;
-    &.swiper {
-        overflow: visible;
-    }
-    .tab_list__wrapper {
-        @include size(auto, 100%);
-        position: relative;
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        border-radius: 10px;
-    }
-    .swiper-slide {
-        height: auto;
-    }
-    .tab {
-        width: 100%;
-        height: 100%;
-        flex-shrink: 0;
-        z-index: 1;
-        text-align: center;
-        @include font-size(28px);
-        font-weight: bold;
-        line-height: 1.5;
-        color: $primary;
-        cursor: pointer;
-        &.active {
-            background-color: #f3f3f3;        
-        }
-        .hover_box {
-            width: 100%;
-            height: 100%;
-            padding: 25px 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            @include media-breakpoint-up(sm) {
-                &:hover{
-                    background-color: rgba(206, 206, 206, 0.1);
-                }
-            }
-        }
-    }
-    .swiper-button-next {
-        width: 60px;
-        height: 100%;
-        top: 0;
-        right: 0;
-        margin: 0;
-        background: linear-gradient(to left, rgba(86, 86, 86, 0.2), rgba(0, 0, 0, 0));
-        &::after {
-            position: absolute;
-            right: 20px;
-        }
-    }
-    .swiper-button-prev {
-        width: 60px;
-        height: 100%;
-        top: 0;
-        left: 0;
-        margin: 0;
-        background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0));
-        &::after {
-            position: absolute;
-            left: 20px;
-        }
-    }
-    .swiper-button-next.swiper-button-disabled, 
-    .swiper-button-prev.swiper-button-disabled {
-        transition: 0.5s ease;
-        opacity: 0;
-        pointer-events: all;
-    }
-    @include media-breakpoint-down(md) {
-        .tab {
-            @include font-size(24px);
-            .hover_box {
-                padding: 15px;
-            }
-        }
-        .swiper-button-next, 
-        .swiper-button-prev {
-            width: 50px;
-        }
-        .swiper-button-next::after, 
-        .swiper-button-prev::after {
-            font-size: 28px;
-        }
-        .swiper-button-next::after {
-            right: 12px;
-        } 
-        .swiper-button-prev::after {
-            left: 12px;
-        }
-    }
-    @include media-breakpoint-down(sm) {
-        .tab {
-            @include font-size(20px);
-            .hover_box {
-                padding: 15px;
-            }
-        }
-
-    }
-}
-
-.tablist_swiper_wrapper {
-    margin-bottom: 50px;
-    overflow: hidden;
-    @include media-breakpoint-down(sm) {
-        margin-bottom: 30px;
-    }
-}
-.tablist_swiper_target {
-    @include size(100%, auto);
-    background-color: #f3f3f3;
-    padding: 30px 25px;
-    .target_wrapper {
-        display: none;
-        flex-wrap: wrap;
-        > div {
-            background-color: white;
-            padding: 4px 22px;
-            margin: 8px;
-            @include font-size(18px);
-            color: $primary;
-            cursor: pointer;
-            @include media-breakpoint-up(md) {
-                &:hover {
-                    background-color: #ebf8ff;     
-                } 
-            }
-        
-        }
-        &.-show {
-            display: flex;
-        }
-    }
-    @include media-breakpoint-down(md) {
-        padding: 15px 10px;
-        .target_wrapper {
-            > div {
-                padding: 6px 10px;
-                margin: 5px;
-                @include font-size(16px);
-            }
-        }
-        
-    }
-  
 }
 
 // 頁碼
@@ -588,6 +244,7 @@ h2.pg_detail_title {
     width: fit-content;
     padding: 0;
     margin: 0 auto;
+    color: $dark-secondary;
     span {
         display: inline;
         margin-bottom: 0
@@ -599,12 +256,15 @@ h2.pg_detail_title {
             @include size(100%, auto);
             font-size: 15px;
             font-weight: 600;
-            color: $main-dark;
+            color: $dark-secondary;
             text-align: center;
             padding: 4px;
         }
         &:hover {
             background-color: rgba(110, 110, 110, 0.1);
+            a {
+                color: $main-dark;
+            }
         }
         &.current {
             a {
@@ -754,7 +414,7 @@ a.linear_btn {
         display: flex;
         .img_box {
             width: 30%;
-            min-width: 160px;
+            min-width: 140px;
         }
         .content_box {
             width: 70%;
@@ -769,6 +429,7 @@ a.linear_btn {
 // 產品卡片
 .product_card {
     width: 100%;
+    box-shadow: 0 0 20px 4px rgba( 0, 0, 0, 0.25);
     .img_box {
         width: 100%;
         position: relative;
@@ -789,15 +450,21 @@ a.linear_btn {
     }
     .content_box {
         padding: 15px;
+        background-color: white;
         .catagory {
+            display: inline-block;
             width: fit-content;
             min-width: 150px;
+            max-width: 100%;
             padding: 1px 12px;
             margin-bottom: 12px;
             @include font-size(14px);
             color: white;
             text-align: center;
             background-color: $secondary;
+            word-break: keep-all;
+            text-overflow: ellipsis;
+            overflow: hidden;
         }
         .title {
             @include font-size(22px);
@@ -828,12 +495,42 @@ a.linear_btn {
             color: $main-dark;
         }
     }
+    @include media-breakpoint-down(lg) {
+        .content_box {
+            .title {
+                @include font-size(20px);
+            }
+            .prize {
+                @include font-size(20px);
+            }
+            
+        }
+    }
+    @include media-breakpoint-down(md) {
+        .content_box {
+            .title {
+                @include font-size(18px);
+            }
+            .prize {
+                @include font-size(18px);
+            }
+        }
+    }
     @include media-breakpoint-down(sm) {
         .content_box {
-            padding: 15px;
-            // .catagory {
-            //     min-height: 80px;
-            // }
+            padding: 10px;
+            .catagory {
+                @include font-size(13px);
+                min-width: auto;
+                max-width: 100%;
+            }
+            .title {
+                @include font-size(16px);
+                min-height: 50px;
+            }
+            .prize {
+                @include font-size(16px);
+            }
         }
     }
 }
@@ -859,13 +556,31 @@ a.linear_btn {
         }
     }
     .content_box {
-        padding: 30px 35px;
+        padding: 30px 15px;
         .title {
             @include font-size(20px);
             font-weight: bold;
             color: $main-dark;
             text-align: center;
             line-height: 1.3;
+        }
+    }
+    @include media-breakpoint-down(lg) {
+        .content_box {
+            padding: 20px 15px;
+        }
+    }
+    @include media-breakpoint-down(md) {
+        .content_box {
+            padding: 20px 15px;
+            .title {
+                @include font-size(18px);
+            }
+        }
+    }
+    @include media-breakpoint-down(sm) {
+        .content_box {
+            padding: 20px 0px;
         }
     }
 }
