--- a/html/scss/_variable.scss
+++ b/html/scss/_variable.scss
@@ -9,8 +9,8 @@ $danger: #fd3635 !default;
 $light: #C4C4C4 !default;
 $dark: #000000 !default;
 $gold: #D8A272;
-$primary-color: #0069AA !important;
-$secondary-color: #1CB4A1 !important;
+$primary-color: #035C3E !important;
+$secondary-color: #C89673 !important;
 
 // 蓋掉 bootstrap預設字體樣式
 $font-family-sans-serif:'Roboto', "微軟正黑體", 'Noto Sans TC', sans-serif, Arial, "Microsoft JhengHei", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
